# taskwarrior-testdata

./: .gitignore  .taskrc  Cargo.toml  README.md  demo.json  demo.taskrc  export.json  tasks.json
src/: main.rs
