[package]
name = "taskwarrior-data"
version = "0.1.0"
authors = ["Dheepak Krishnamurthy <me@kdheepak.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
task-hookrs = { git = "https://github.com/matthiasbeyer/task-hookrs" }
